BJS2-70953
Устранение замечаний от "@SnurnicynKonstantin"