@@ -1,28 +1,19 @@
 package school.faang.train_stream_api_2;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.Comparator;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 public class ListOperations {
-    public static Set<Set<Integer>> uniqueCouples(Set<Integer> numbers, int target) {
-        Set<Integer> seen = new HashSet<>();
+    public static Set<List<Integer>> uniqueCouples(Set<Integer> numbers, int target) {
         return numbers.stream()
-                .flatMap(num -> {
-                    int complement = target - num;
-                    if (seen.contains(complement)) {
-                        return Stream.of(new HashSet<>(Arrays.asList(Math.min(num, complement),
-                                Math.max(num, complement))));
-                    } else {
-                        seen.add(num);
-                        return Stream.empty();
-                    }
-                })
+                .filter(num -> numbers.contains(target - num))
+                .map(num -> Arrays.asList(num, target - num))
+                .peek(Collections::sort)
                 .collect(Collectors.toSet());
     }
 
@@ -30,14 +21,14 @@ public class ListOperations {
         return countryToCapital.entrySet().stream()
                 .sorted(Map.Entry.comparingByKey())
                 .map(Map.Entry::getValue)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<String> filteringAndSortingLines(List<String> strings, String prefix) {
         return strings.stream()
                 .filter(s -> s != null && s.toLowerCase().startsWith(prefix.toLowerCase()))
                 .sorted(Comparator.comparingInt(String::length))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<String> transformationOfNumbersIntoBinaryFormat(List<Integer> numbers) {
